em, rem - em jest zależne od kontenera, rem nie - informacja

--- a/css-font-em.html
+++ b/css-font-em.html
@@ -37,9 +37,9 @@
 <h1 class="test">Inny test</h1>
 <p>Inny tekst</p>
 <p class="dalej">Dalej</p>
-<p class="jeszcze dalej">To ma rozmiar 40px
-    <span>To ma rozmiar 2 * 40px (em)</span>
-    <span class="ok">To ma rozmiar 2 * 16px (rem - bierze rozmiar z przeglądarki)</span>
+<p class="jeszcze dalej">To ma rozmiar 40px<br/>
+    <span>To ma rozmiar 2 * 40px (em)</span><br/>
+    <span class="ok">To ma rozmiar 2 * 16px (rem - bierze rozmiar z przeglądarki)</span><br/>
 </p>
 </body>
 </html>
